--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
 }
 
 .profile-image {
@@ -37,6 +41,18 @@ button {
   padding: 8px 24px;
 }
 
+.left-links {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.right-links {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
 a {
   /* this removes the line under our links */
   text-decoration: none;
@@ -45,4 +61,8 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 15px;
+  padding: 0;
+  margin: 0;
 }
