--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -25,7 +25,7 @@
 }
 
 .sidebar {
-  background-color: #C50208;
+  background-color: #c50208;
 }
 
 .sidebar .photo {
@@ -36,7 +36,6 @@
   border-radius: 10px;
 }
 
-
 .sidebar .side-content {
   background-color: white;
   color: black;
@@ -45,7 +44,7 @@
 }
 
 .nav {
-  background-color: #C50208;
+  background-color: #c50208;
 }
 
 .nav ul li {
@@ -65,7 +64,7 @@
 }
 
 .article .card {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   color: black;
   text-align: center;
 }
@@ -88,4 +87,78 @@
 .footer p {
   font-size: 13px;
   font-weight: normal;
+}
+
+/* Solution */
+
+ul {
+  list-style-type: none;
+}
+
+.container {
+  display: grid;
+  height: 100vh;
+  grid-template-columns: minmax(300px, 1fr) 4fr;
+  grid-template-rows: 0.75fr 0.5fr 6fr 0.4fr;
+  gap: 4px;
+}
+
+.header {
+  grid-column: 1 / 3;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  align-items: center;
+}
+
+div .logo {
+  place-self: center start;
+  font-size: clamp(1.25rem, 6vw + 1.5rem, 1fr);
+}
+
+.menu > ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr) 50px;
+}
+
+div.header > div.menu > ul > li {
+  font-size: clamp(1rem, 5vw + 1.5rem, 20px);
+  place-self: center end;
+}
+
+.sidebar {
+  grid-row: 2 / 4;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 3rem;
+}
+
+.nav {
+  display: grid;
+  align-items: center;
+}
+
+.nav > ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.nav > ul > li {
+  place-self: center;
+  font-size: clamp(1rem, 5vw + 1rem, 20px);
+}
+
+.article {
+  display: grid;
+  gap: 14px;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-auto-rows: minmax(200px, 1fr);
+}
+
+.footer {
+  place-self: stretch;
+  grid-column: 1 / 3;
+}
+
+.footer > p {
+  font-size: clamp(1rem, 6vw + 1.5rem, 25px);
 }
